# kafka-guardian

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEMO_COMMANDS.md  DEMO_SUMMARY.md  Dockerfile  GIT_SETUP_GUIDE.md  LICENSE  LIVE_DEMO_GUIDE.md  Makefile  PUSH_TO_GITHUB.md  QUICK_START.md  README.md  SETUP_COMPLETE.md  TEAM_PRESENTATION.md  TEST_RESULTS.md  config_local_test.yaml  deploy_to_github.sh  docker-compose.test.yml  pyproject.toml  quick_demo.sh  quick_deploy.sh  quick_start_kafka.sh  requirements-dev.txt  requirements.txt  run_kafka_test.sh  sample_config.ini  sample_config.json  sample_config.yaml  setup.py  setup_python.sh
.github/workflows/: test.yml
.kiro/specs/kafka-self-healing/: design.md  requirements.md  tasks.md
docs/: architecture_deep_dive.md  complete_system_overview.md  configuration_reference.md  implementation_guide.md  operational_runbook.md  plugin_development.md  real_time_scenarios.md  senior_engineer_guide.md  setup_and_deployment.md  troubleshooting.md
examples/: README.md  config_development.yaml  config_docker.yaml  config_kubernetes.yaml  config_minimal.yaml  config_multi_datacenter.yaml  config_production.yaml  config_testing.yaml
scripts/: docker-entrypoint.sh  healthcheck.sh  run_tests.sh  setup_local_testing.sh
src/kafka_self_healing/: __init__.py  config.py  credentials.py  exceptions.py  integration.py  logging.py  main.py  models.py  monitoring.py  monitoring_plugins.py  notification.py  plugins.py  recovery.py  recovery_plugins.py  security.py
tests/: __init__.py  benchmark.py  failure_simulation.py  test_config.py  test_config_e2e.yaml  test_credentials.py  test_e2e.py  test_exceptions.py  test_integration.py  test_logging.py  test_main.py  test_models.py  test_monitoring.py  test_monitoring_plugins.py  test_notification.py  test_notification_integration.py  test_plugins.py  test_recovery.py  test_recovery_integration.py  test_recovery_plugins.py  test_resilience.py  test_security.py
